<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundddd"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    app:layoutDescription="@xml/activity_main_scene2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btnAddIngredients"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="#E91E63"
        android:text="@string/app_addingredients"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edtIngredients2"
        app:layout_constraintTop_toBottomOf="@+id/btnAddRecipe"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/btnAddInstruction"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="#E91E63"
        android:text="@string/app_addInstruction"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edtInstruction"
        app:layout_constraintTop_toBottomOf="@+id/btnAddIngredients"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/edtRecipeName"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="#FDC0F7"
        android:ems="10"
        android:hint="@string/app_recipename"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddRecipe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/btnAddRecipe"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#E91E63"
        android:text="@string/app_addrecipe"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#E91E63"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edtRecipeName"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtInstruction"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="#FDC0F7"
        android:ems="10"
        android:hint="@string/app_addInstruction"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddInstruction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtIngredients2"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/edtIngredients2"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:background="#FDC0F7"
        android:ems="10"
        android:hint="@string/app_ingredients"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddIngredients"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtRecipeArea"
        android:layout_width="395dp"
        android:layout_height="395dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.715" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E91E63"
        android:text="@string/app_clearAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddInstruction"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#E91E63"
        android:text="@string/app_saveRecipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtInstruction"
        app:layout_constraintVertical_bias="0.962" />
</androidx.constraintlayout.widget.ConstraintLayout>